testsuite/tests/properties/invalid_call/bad_arg_type.lkt
import common

class BarNode: FooNode {
    @export fun bar_prop(): Int = node.root_prop(null[FooNode])
}
